[Bugfix][Template] adjust menu item spacing to make social items fit again

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -332,7 +332,7 @@ a:hover.logo	{
 				}
 				
 #menu li		{
-				margin:0 5px 0 0;
+				margin:0 3px 0 0;
 				padding:0;
 				float:left;
 				font:bold 1.1em Arial, Helvetica, sans-serif;
